# oraclesql-pygments-lexer

./: README.md  pyproject.toml
oraclesql/: _oraclesql_builtins.py  lexer.py
