[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oraclesql-pygments-lexer"
version = "0.1.1"
authors = [
    { name = "Felipe Zorzo", email = "felipe.b.zorzo@gmail.com" },
    { name = "Rafaël Lopez", email = "lopez@airelle.info" }
]
maintainers = [
    { name = "Rafaël Lopez", email = "lopez@airelle.info" }
]
description = "Pygments lexer for Oracle SQL and PL/SQL"
dependencies = ["pygments"]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.entry-points."pygments.lexers"]
forms = "oraclesql.lexer:OracleSQLLexer"
